crates/swc/tests/tsc-references/classes/classDeclarations/classHeritageSpecification/classExtendsItself/input.ts/es2015.2.minified/output.js
class C extends C {
}
class D extends D {
}
class E extends E {
} // error
